@@ -109,9 +109,11 @@ class MovedModule(_LazyDescr):
         # __file__ or __name__ of every module in sys.modules. This doesn't work
         # well if this MovedModule is for an module that is unavailable on this
         # machine (like winreg on Unix systems). Thus, we pretend __file__ and
-        # __name__ don't exist if the module hasn't been loaded yet. See issues
-        # #51 and #53.
-        if attr in ("__file__", "__name__") and self.mod not in sys.modules:
+        # __name__ don't exist if the module hasn't been loaded yet. We give
+        # __path__ the same treatment for Google AppEngine. See issues #51, #53
+        # and #56.
+        if (attr in ("__file__", "__name__", "__path__") and
+            self.mod not in sys.modules):
             raise AttributeError
         _module = self._resolve()
         value = getattr(_module, attr)
